feat: Correção completa de testes e mapeamento + atualização de segurança
- Corrigido mapeamento de dataAlteracao em UserMapper e UserEntity
- Configurado H2 em memória para testes (application-test.properties)
- Adicionado @TestPropertySource em testes de integração
- Corrigido UserRepositoryJpa (removido variável não utilizada)
- Corrigido imports não utilizados em AuthUseCaseTest e UpdateUseCaseTest
- Atualizado PostgreSQL driver para versão 42.7.7 (correção vulnerabilidade)
- Corrigido AddressMapper (problema com MapStruct)
- Todos os 125 testes agora passam com sucesso
- Documentação atualizada (README.md, doc.md)
- Removido arquivo .md duplicado
- Projeto 100% limpo: 0 erros, 0 warnings, 0 vulnerabilidades